--- a/index[1].html
+++ b/index[1].html
@@ -12,9 +12,9 @@
   <!-- Viewport for responsive web design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- document ready -->
-  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
-  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="script.js"></script>
+  <link rel="stylesheet" href="../orris0/css/base.css" type="text/css" media="screen" charset="utf-8" />
+  <script src="../orris0/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="../orris0/script.js"></script>
 	
 
 	
@@ -25,7 +25,7 @@
 	<!-- 02_colorbox -->
   <script src="../orris0/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="../orris0/js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="../orris0/js/scripts.js"></script>
+  <script type="text/javascript" src="../orris0/scripts.js"></script>
   
   
   
@@ -68,7 +68,7 @@
   <link rel="stylesheet" href="../orris0/CSS/font-awesome.min.css">
 
   <link rel="stylesheet" href="../orris0/CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
-  <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="../orris0/lightbox.css" type="text/css" media="screen" charset="utf-8">
 
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
