--- a/index[1].html
+++ b/index[1].html
@@ -194,7 +194,7 @@
   
     <div class="wrapper">
         
-        <div id="container">
+        <div id="content">
             
           <div class="row" id="header#html5style2header">
               <div class="col-12">
