--- a/index[1].html
+++ b/index[1].html
@@ -439,6 +439,7 @@
           </p>
         </div>
       </div>
+	  </div> <!-- end-content-->
 
       <div id="footer">
 
@@ -453,7 +454,7 @@
           &copy; Copyright 2010 CelebriTracker Productions
         </p>
       </div>
-    </div> <!-- end-wrapper-->
+
   </div><!-- end-container -->
 
   <!-- document ready -->
