--- a/index[1].html
+++ b/index[1].html
@@ -47,11 +47,11 @@
   <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css"
     media="screen" charset="utf-8">
         -->
-  <link rel="stylesheet" href="./style[1].css">
-  <link rel="stylesheet" href="./nav[1].css">
+  <link rel="stylesheet" href="../orris0/style[1].css">
+  <link rel="stylesheet" href="../orris0/nav[1].css">
   <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="../orris0/CSS/font-awesome.min.css">
+  <link rel="stylesheet" href="../orris0/fonts/font-awesome.min.css">
 
   <link rel="stylesheet" href="../orris0/CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="../orris0/lightbox.css" type="text/css" media="screen" charset="utf-8">
