--- a/index[1].html
+++ b/index[1].html
@@ -5,15 +5,17 @@
 
   <title>Flexy Responsive Flexbox Grid Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <!-- document ready -->
-  <link rel="stylesheet" href="../orris0/css-js/base.css" type="text/css" media="screen" charset="utf-8" />
-  <script src="../orris0/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <link rel="stylesheet" href="./css-jq/base.css"> type="text/css" media="screen" charset="utf-8" />
+  <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="../orris0/scripts.js"></script>
+  <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
   <!-- 01_lightbox -->
-  <link rel="stylesheet" href="../orris0/css-jq/lightbox.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8" />
   <!-- 02_colorbox -->
-  <link rel="stylesheet" href="../orris0/css-jq/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
-  <script src="../orris0/js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
+  <link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
+  <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
   <!-- slide_show --
   
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
@@ -21,14 +23,14 @@
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
         -->
-  <link rel="stylesheet" href="../orris0/style[1].css">
-  <link rel="stylesheet" href="../orris0/nav[1].css">
+  <link rel="stylesheet" href="./style[1].css">
+  <link rel="stylesheet" href="./nav[1].css">
   <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="../orris0/fonts/font-awesome.min.css">
+  <link rel="stylesheet" href=".//fonts/font-awesome.min.css">
 
-  <link rel="stylesheet" href="../orris0/CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
-  <link rel="stylesheet" href="../orris0/lightbox.css" type="text/css" media="screen" charset="utf-8">
+  
+  
 
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
@@ -324,12 +326,12 @@
   </div><!-- end-container -->
 
   <!-- document ready -->
-  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="../orris0/css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="script.js"></script>
 
   <!-- selecting -->
-  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />  
+  <link rel="stylesheet" href="../../css-jq/base.css" type="text/css" media="screen" charset="utf-8" />  
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="script.js"></script>
 	
