--- a/index[1].html
+++ b/index[1].html
@@ -9,7 +9,7 @@
   <!-- document ready -->
   <link rel="stylesheet" href="./css-jq/base.css"> type="text/css" media="screen" charset="utf-8" />
   <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="../orris0/scripts.js"></script>
+  <script type="text/javascript" src="./scripts.js"></script>
   <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
   <!-- 01_lightbox -->
   <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8" />
