--- a/index[1].html
+++ b/index[1].html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- document ready -->
-  <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
   <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./scripts.js"></script>
   <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
   <!-- 01_lightbox -->
-  <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
   <!-- 02_colorbox -->
-  <link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
+  <link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
   <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
   <!-- slide_show --
   
