--- a/index[1].html
+++ b/index[1].html
@@ -327,7 +327,7 @@
   <!-- selecting -->
   <link rel="stylesheet" href="../../css-jq/base.css" type="text/css" media="screen" charset="utf-8" />  
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="./script.js"></script>
 	
   <!-- 01_lightbox -->
   <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
