--- a/index[1].html
+++ b/index[1].html
@@ -320,10 +320,11 @@
   </div><!-- end-container -->
 
   <!-- document ready -->
-  <link rel="stylesheet" href="../orris0/css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
-  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="script.js"></script>
-
+  <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
+  <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="./scripts.js"></script>
+   <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
   <!-- selecting -->
   <link rel="stylesheet" href="../../css-jq/base.css" type="text/css" media="screen" charset="utf-8" />  
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
