--- a/index[1].html
+++ b/index[1].html
@@ -320,12 +320,13 @@
   </div><!-- end-container -->
 
   <!-- document ready -->
-  <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
   <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="./scripts.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     
-    <script src="./js/bootstrap.bundle.js.map"></script>
+  <script src="./js/bootstrap.bundle.js.map"></script>
     
 </body>
 
