--- a/index[1].html
+++ b/index[1].html
@@ -329,11 +329,13 @@
   <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./scripts.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="../../css/base.css" media="screen">	
+  	
 
   <script src="./jquery.easing.1.3.js"></script> 
   <script src="./js/bootstrap.bundle.js.map"></script>
-    
+    <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="./lib/jquery-ui-1.8.17.custom.min.js"></script>
+  <script type="text/javascript" src="script.js"></script> 
 </body>
 
 </html>
