--- a/index[1].html
+++ b/index[1].html
@@ -335,7 +335,7 @@
   <script src="./js/bootstrap.bundle.js.map"></script>
     <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./lib/jquery-ui-1.8.17.custom.min.js"></script>
-  <script type="text/javascript" src="script.js"></script> 
+  <script type="text/javascript" src="./script.js"></script> 
 </body>
 
 </html>
