--- a/index[1].html
+++ b/index[1].html
@@ -62,16 +62,15 @@
 </head>
 <body>
     <div class="wrapper">   
-        <div id="content">  
-          <div class="row" id="#html5style2header">
-              <div class="col-12">  
-                  <img class="logo" src="img/flexy-logo.png">
-              
-              </div><!-- end-col-12 -->
-          </div><!-- end-header -->
-          <br class="clear">
+        <div class="data" id="content">  
+            <header class="row" id="#html5style2header">
+                <div class="col-12">  
+                    <img class="logo" src="img/flexy-logo.png"> 
+                </div><!-- end-col-12 -->
+            </header><!-- end-header -->
+            <br class="clear">
 
-          <div class="row">
+            <div class="row">
               <div class="col-12">
                   <nav role="navigation" id="nav">
                       <input class="trigger" type="checkbox" id="mainNavButton">
