--- a/index[1].html
+++ b/index[1].html
@@ -12,8 +12,7 @@
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./js/jquery.easing.1.3.js"></script>
   <script type="text/javascript" src="./script.js"></script>
-  <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="./scripts.js"></script>
+  <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
   <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
   <!-- 01_lightbox -->
   <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
@@ -326,6 +325,7 @@
   <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
   <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
   <script type="text/javascript" src="./scripts.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   	
