--- a/index[1].html
+++ b/index[1].html
@@ -9,10 +9,11 @@
   <!-- document ready -->
   <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="bio.css" type="text/css" media="screen" charset="utf-8" />
-  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./js/jquery.easing.1.3.js"></script>
   <script type="text/javascript" src="./script.js"></script>
   <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="./style[1].css">
   <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
   <!-- 01_lightbox -->
   <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
@@ -20,15 +21,11 @@
   <link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
   <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
   <link rel="stylesheet" href="./scroll.css" type="text/css" media="screen" charset="utf-8" />
-  <link rel="stylesheet" href="./style[1].css">
+  
   <link rel="stylesheet" href="./nav[1].css">
   <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="./fonts/font-awesome.min.css">
-
-  
-  
-
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
