--- a/index[1].html
+++ b/index[1].html
@@ -20,8 +20,7 @@
   <!-- 02_colorbox -->
   <link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
   <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
-  <link rel="stylesheet" href="./scroll.css" type="text/css" media="screen" charset="utf-8" />
-  
+  <link rel="stylesheet" href="./scroll.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="./nav[1].css">
   <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -30,7 +29,6 @@
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
-
   <meta name="google-adsense-account" content="ca-pub-9639638377144073">
   <meta property="og:title" content="A Basic HTML5 Template">
   <meta property="og:type" content="website">
@@ -49,8 +47,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073"
-    crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
   <!--Add conditional Javascript-->
   <!--[if lte IE 8]>
                 <script src="js/html5.js" type="text/javascript"></script>
