--- a/index[1].html
+++ b/index[1].html
@@ -5,7 +5,13 @@
 
   <title>Flexy Responsive Flexbox Grid Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta name="google-adsense-account" content="ca-pub-9639638377144073">
+  <meta property="og:title" content="A Basic HTML5 Template">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="A simple HTML5 Template for new projects.">
+  <meta property="og:image" content="image.png">
+  <meta name="keywords" content="HTML5, Node.js, Jquery">
+  <meta name="author" content="Orris Baker">
   <!-- document ready -->
   <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="bio.css" type="text/css" media="screen" charset="utf-8" />
@@ -29,13 +35,7 @@
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
-  <meta name="google-adsense-account" content="ca-pub-9639638377144073">
-  <meta property="og:title" content="A Basic HTML5 Template">
-  <meta property="og:type" content="website">
-  <meta property="og:description" content="A simple HTML5 Template for new projects.">
-  <meta property="og:image" content="image.png">
-  <meta name="keywords" content="HTML5, Node.js, Jquery">
-  <meta name="author" content="Ian Andolina">
+  
   <!-- Favicon-->
   <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
   <link rel="alternate" type="application/pdf" href="MainPage.pdf">
