--- a/index[1].html
+++ b/index[1].html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="bio.css" type="text/css" media="screen" charset="utf-8" />
   <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./js/jquery.easing.1.3.js"></script>
-  <script type="text/javascript" src="./script.js"></script>
+  <script type="text/javascript" src="./scripts.js"></script>
   <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
   <link rel="stylesheet" href="./style[1].css">
   <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
@@ -326,9 +326,9 @@
 
   <script src="./jquery.easing.1.3.js"></script> 
   <script src="./js/bootstrap.bundle.js.map"></script>
-    <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    
   <script type="text/javascript" src="./lib/jquery-ui-1.8.17.custom.min.js"></script>
-  <script type="text/javascript" src="./script.js"></script> 
+   
 </body>
 
 </html>
