--- a/index[1].html
+++ b/index[1].html
@@ -64,12 +64,11 @@
         <div class="data" id="content">
             <div id="content">
                 <h2>Award winning accommodation, self catering or bed and breakfast</h2>
-<div id="leftcol">
-<h3>Cottages, converted barns, caravans</h3>
-<img alt="Cottage interior" title="Cottage interior" height="225"
-src="images/cotdining300.jpg" width="300"><br>The superb interior
-of one of our cottages
-</div>
+                <div id="leftcol">
+                    <h3>Cottages, converted barns, caravans</h3>
+                    <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300">
+                    <br>The superb interior of one of our cottages
+                </div>
 <nav><!--use the semantic tag <nav>-->
 <ul><!--start of menu list-->
 <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
