--- a/index[1].html
+++ b/index[1].html
@@ -112,7 +112,7 @@
             <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
             <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
             <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
-          </ul><!--end of menu list-->
+          </ul><!--end of menu list--
         </nav><!--</div> removed and replaced with </nav>--
         <div id="midcol">
           <h3>Situated in the UK's beautiful Devon countryside</h3>
