--- a/index[1].html
+++ b/index[1].html
@@ -123,6 +123,11 @@
           <div class="çol-12">
             <img src="img/paper.png" ;>
             <div id="navigation">
+                <div id="leftcol">
+                    <h3>Cottages, converted barns, caravans</h3>
+                    <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300">
+                    <br>The superb interior of one of our cottages
+                </div>
               <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Buy Now!</a></li>
