--- a/index[1].html
+++ b/index[1].html
@@ -94,7 +94,7 @@
           <h2 class="dark">Practical HTML5 Projects for fun and Profit!</h2>
         </div><!-- end-col-12 -->
       </div><!-- end-row -->
-      <div id="content">
+      <div id="html5style2content">
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
        <!--
         <div id="leftcol">
