--- a/index[1].html
+++ b/index[1].html
@@ -64,7 +64,7 @@
       </div><!-- end-col-12 -->
     </header><!-- end-header -->
     <br class="clear">
-    <div class="data" id="content">
+    <div class="data" id="#html5style2content">
 
       <div class="row">
         <div class="col-12">
