--- a/index[1].html
+++ b/index[1].html
@@ -101,7 +101,7 @@
           <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300">
             <br>The superb interior of one of our cottages
         </div>
-        <nav><!--use the semantic tag <nav>--
+        <nav##html5style2nav><!--use the semantic tag <nav>--
           <ul><!--start of menu list--
             <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
             <li class="btn"><a href="maps.html" title="Location Maps">Maps</a>
@@ -127,6 +127,18 @@
             <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300">
             <br>The superb interior of one of our cottages
           </div>
+          <nav##html5style2nav><!--use the semantic tag <nav>--
+          <ul><!--start of menu list-->
+            <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+            <li class="btn"><a href="maps.html" title="Location Maps">Maps</a>
+            </li>
+            <li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a>
+            </li>
+            <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
+            <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
+            <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
+          </ul><!--end of menu list-->
+        </nav><!--</div> removed and replaced with </nav>
 
           <div id="navigation">
 
