--- a/index[1].html
+++ b/index[1].html
@@ -138,8 +138,11 @@
             <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
             <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
           </ul><!--end of menu list-->
-        </nav><!--</div> removed and replaced with </nav>
-
+        </nav><!--</div> removed and replaced with </nav> -->
+        <div class="data" id="#html5style2midcol">
+          <h3>Situated in the UK's beautiful Devon countryside</h3>
+          <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
+        </div>
           <div id="navigation">
 
             <ul>
