--- a/index[1].html
+++ b/index[1].html
@@ -55,16 +55,22 @@
                 <script src="js/html5.js" type="text/javascript"></script>
             <![endif]-->
 </head>
-
 <body>
-  <div class="wrapper">
+    <div class="wrapper">
+        <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+            <h1 id="html5style2h1">StarTrackr!</h1>
+			<div class="col-12">
+			    <img class="logo" src="img/flexy-logo.png">
+		    </div><!-- end-col-12 -->
+        </header>
+	<!--  
     <header class="row" id="#html5style2header">
       <div class="col-12">
         <img class="logo" src="img/flexy-logo.png">
-      </div><!-- end-col-12 -->
-    </header><!-- end-header -->
+      </div><!-- end-col-12 --
+    </header><!-- end-header --
     <br class="clear">
-
+-->
     <div class="row">
       <div class="col-12">
         <nav role="navigation" id="nav">
