--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 <body>
     <div class="wrapper">
         <a href="../orris0/gran-parents.jpg" class="lightbox">pic</a>
-        <div class="row">
+        <div class="row" class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
             <div class="col-12">
 
                 <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
