--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
 <body>
     <div class="wrapper">
-        <a href="../orris0/gran-parents.jpg" class="lightbox">pic</a>
+        <a href="./gran-parents.jpg" class="lightbox">pic</a>
         <div class="row" class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
             <div class="col-12">
 
