--- a/index[1].html
+++ b/index[1].html
@@ -15,7 +15,7 @@
   <meta name="author" content="Orris Baker">
   <!-- document ready -->
   <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-  <link rel="stylesheet" href="bio.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8" />
   <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
   <script type="text/javascript" src="./scripts.js"></script>
@@ -60,7 +60,7 @@
         <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
             <h1 id="html5style2h1">StarTrackr!</h1>
 			<div class="col-12">
-			    <img class="logo" src="img/flexy-logo.png">
+			    <img class="logo" src="./img/flexy-logo.png">
 		    </div><!-- end-col-12 -->
         </header>
 	<!--  
