--- a/index[1].html
+++ b/index[1].html
@@ -60,7 +60,7 @@
         <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
             <h1 id="html5style2h1">StarTrackr!</h1>
 			<div class="col-12">
-			    <img class="logo" src="./img/flexy-logo.png">
+			    <img class="logo" src="img/flexy-logo.png">
 		    </div><!-- end-col-12 -->
         </header>
 	<!--  
