--- a/index[1].html
+++ b/index[1].html
@@ -55,9 +55,10 @@
                 <script src="js/html5.js" type="text/javascript"></script>
             <![endif]-->
 </head>
+
 <body>
-    
-	<!--  
+
+  <!--  
     <header class="row" id="#html5style2header">
       <div class="col-12">
         <img class="logo" src="img/flexy-logo.png">
@@ -65,30 +66,30 @@
     </header><!-- end-header --
     <br class="clear">
 -->
-    <div class="row">
-      <div class="col-12">
-        <nav role="navigation" id="nav">
-          <input class="trigger" type="checkbox" id="mainNavButton">
-          <label for="mainNavButton" onclick>Menu</label>
-          <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./index[1].html">About Us</a></li>
-            <li><a href="./membership.html">Products</a></li>
-            <li><a href="./news.html">Blog</a></li>
-            <li><a href="./starter-page.html">Specials</a></li>
-            <li><a href="./welcome.html">Contact</a></li>
-          </ul>
-        </nav>
-      </div><!-- col-12 -->
-    </div><!-- end-.row -->
+  <div class="row">
+    <div class="col-12">
+      <nav role="navigation" id="nav">
+        <input class="trigger" type="checkbox" id="mainNavButton">
+        <label for="mainNavButton" onclick>Menu</label>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./index[1].html">About Us</a></li>
+          <li><a href="./membership.html">Products</a></li>
+          <li><a href="./news.html">Blog</a></li>
+          <li><a href="./starter-page.html">Specials</a></li>
+          <li><a href="./welcome.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div><!-- col-12 -->
+  </div><!-- end-.row -->
 
-	<div class="wrapper">
-        <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
-            <h1 id="html5style2h1">StarTrackr!</h1>
-			<div class="col-12">
-			    <img class="logo" src="img/flexy-logo.png">
-		    </div><!-- end-col-12 -->
-		</header>
+  <div class="wrapper">
+    <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+      <h1 id="html5style2h1">StarTrackr!</h1>
+      <div class="col-12">
+        <img class="logo" src="img/flexy-logo.png">
+      </div><!-- end-col-12 -->
+    </header>
 
     <div class="row">
       <div class="çol-12">
@@ -131,26 +132,26 @@
           <img src="img/paper.png" ;>
 
           <div class="data" id="html5style2leftcol">
-          <h3>Cottages, converted barns, caravans</h3>
-          <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
-          <br>The superb interior of one of our cottages
-      </div>
+            <h3>Cottages, converted barns, caravans</h3>
+            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+            <br>The superb interior of one of our cottages
+          </div>
 
-      <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-        <ul><!--start of menu list-->
-            <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-            <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-            <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
-            <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
-            <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-        </ul><!--end of menu list-->
-      </nav>
+          <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+            <ul><!--start of menu list-->
+              <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+              <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+              <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+              <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+              <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+            </ul><!--end of menu list-->
+          </nav>
 
-      <!--</div> removed and replaced with </nav>-->
-      <div class="data" id="html5style2midcol">
-        <h3>Situated in the BDA's beautiful countryside</h3>
-        <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
-      </div>
+          <!--</div> removed and replaced with </nav>-->
+          <div class="data" id="html5style2midcol">
+            <h3>Situated in the BDA's beautiful countryside</h3>
+            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+          </div>
           <div id="navigation">
 
             <ul>
@@ -386,7 +387,8 @@
   <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
   <script type="text/javascript" src="./scripts.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen"
+    charset="utf-8">
   <link rel="stylesheet" href="./splitter.css" type="text/css" media="screen" charset="utf-8">
   <script src="./jquery.easing.1.3.js"></script>
   <script src="./js/bootstrap.bundle.js.map"></script>
