--- a/index[1].html
+++ b/index[1].html
@@ -96,13 +96,13 @@
         <img src="img/kite.png" ;>
       </div>
     </div><!-- end-.row -->
-
+    <div class="data" id="#html5style2content">
     <div class="row">
       <div class="çol-12" padding="2%">
         <h2 class="dark">Practical HTML5 Projects for fun and Profit!</h2>
       </div><!-- end-col-12 -->
     </div><!-- end-row -->
-    <div class="data" id="#html5style2content">
+    <!-- <div class="data" id="#html5style2content"> -->
       <h2>Award winning accommodation, self catering or bed and breakfast</h2>
       <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
         <div class="çol-12">
