--- a/index[1].html
+++ b/index[1].html
@@ -215,6 +215,36 @@
 
       <div class="row" style="background-color: #F6931E;">
         <div class="col-11">
+			<ul id="gallery-3col-mix">
+					<li><a href="#"><img src="images/alithumb.jpg" title="Ali" alt="Ali">
+							<img class="hid" src="images/alilarge.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/catthumb.jpg" title="Cat" alt="Cat">
+							<img class="hid" src="images/catlarge.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/beachthumb.jpg" title="Baech" alt="Beach">
+							<img class="hid" src="images/beachlarge.jpg" alt=""></a>
+					</li>
+				</ul>
+				<ul id="gallery-2col">
+					<li><a href="#"><img src="images/childrenthumb.jpg" title="Children" alt="Children">
+							<img class="hid" src="images/childrenbig.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/seathumb.jpg" title="Seascape" alt="Seascape">
+							<img class="hid" src="images/seabig.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/take-cardthumb.jpg" title="Take a card" alt="Take a card">
+							<img class="hid" src="images/take-cardbig.jpg" alt=""></a>
+					</li>
+				</ul>
+				<ul id="gallery-3col-mix">
+					<li><a href="#"><img src="images/walesthumb.jpg" title="Wales" alt="Wales">
+							<img class="hid" src="images/walesbig.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/pensthumb.jpg" title="Chelsea pensioners" alt="Chelsea pensioners">
+							<img class="hid" src="images/pensbig.jpg" alt=""></a>
+					</li>
+				</ul>
           <p id="no-script">
             We recommend that you have JavaScript enabled!
           </p>
