--- a/index[1].html
+++ b/index[1].html
@@ -22,6 +22,7 @@
   <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
   <link rel="stylesheet" href="./style[1].css">
   <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="./CSS/gallery-3col-mix.css" type="text/css" media="screen" charset="utf-8">
   <!-- 01_lightbox -->
   <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
   <!-- 02_colorbox -->
