--- a/index[1].html
+++ b/index[1].html
@@ -33,7 +33,7 @@
   <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="./fonts/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
+  <link rel="stylesheet" type="text/css" href="./CSS/gallery-3col-mix.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
