--- a/index[1].html
+++ b/index[1].html
@@ -128,7 +128,7 @@
       <div class="row" style="background-color: #F6931E;">
         <div class="col-11">
           <h2>Get ready for take off.</h2>
-          <div id="navigation">
+          <div class="data" id="navigation">
 
             <ul>
               <li><a href="#">Home</a></li>
