--- a/index[1].html
+++ b/index[1].html
@@ -1,4 +1,4 @@
--
+
 <!DOCTYPE html>
 <html ng-app lang="en">
 
@@ -170,7 +170,7 @@
           <br class="clear">
           <div class="data" id="gallerypagemidcol">
             <div class="data" id="gallerypagegallery-block">
-              <ul id="col-1">
+              <ul id="gallerypagecol-1">
                 <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid"
                       src="images/alibig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid"
@@ -178,7 +178,7 @@
                 <li><a href="#"><img src="images/beachthumb.jpg" alt="Beach" title="Beach"><img class="hid"
                       src="images/beachbig.jpg" alt=""></a></li>
               </ul>
-              <ul id="col-2">
+              <ul id="gallerypagecol-2">
                 <li><a href="#"><img src="images/fernsthumb.jpg" alt="Ferns" title="Ferns"><img class="hid"
                       src="images/fernsbig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/nicothumb.jpg" alt="Nico" title="Nico"><img class="hid"
@@ -186,7 +186,7 @@
                 <li><a href="#"><img src="images/childbeachthumb.jpg" alt="Child and Beach" title="Child and Beach"><img
                       class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
               </ul>
-              <ul id="col-3">
+              <ul id="gallerypagecol-3">
                 <li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern"
                       title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img class="hid"
