--- a/index[1].html
+++ b/index[1].html
@@ -6,6 +6,11 @@
 
   <title>Flexy Responsive Flexbox Grid Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+  <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
+  <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="script.js"></script>
+	
   <meta name="google-adsense-account" content="ca-pub-9639638377144073">
   <meta property="og:title" content="A Basic HTML5 Template">
   <meta property="og:type" content="website">
@@ -440,11 +445,15 @@
   </div><!-- end-container -->
 
   <!-- document ready -->
-  <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
   <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="script.js"></script>
+
+	
+  
   <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
-  <script type="text/javascript" src="./scripts.js"></script>
+  
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen"
     charset="utf-8">
