--- a/index.html
+++ b/index.html
@@ -297,6 +297,22 @@
 	-->
 
 <body>
+	<div class="row">
+    <div class="col-12">
+      <nav role="navigation" id="nav">
+        <input class="trigger" type="checkbox" id="mainNavButton">
+        <label for="mainNavButton" onclick>Menu</label>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./index[1].html">About Us</a></li>
+          <li><a href="./membership.html">Products</a></li>
+          <li><a href="./news.html">Blog</a></li>
+          <li><a href="./starter-page.html">Specials</a></li>
+          <li><a href="./welcome.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div><!-- col-12 -->
+  </div><!-- end-.row -->
     <div class="wrapper">
         <div class="row" class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
             <div class="col-12">
