--- a/index[1].html
+++ b/index[1].html
@@ -2,14 +2,30 @@
 <!DOCTYPE html>
 <html ng-app lang="en">
 
-<head profile="http://www.w3.org/2005/10/profile">
+    <head profile="http://www.w3.org/2005/10/profile">
 
-  <title>Flexy Responsive Flexbox Grid Website</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Flexy Responsive Flexbox Grid Website</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <!-- Viewport for responsive web design -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
+		<link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
+        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="./script.js"></script> 
+        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+        
+        <!-- <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8"> -->
+        <link rel="stylesheet" href="./style[1].css">
+        <link rel="stylesheet" href="./nav[1].css">
+        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel="stylesheet" href="./font-awesome.min[1].css">
+		<link rel="icon" type="image/png" href="./flexy-logo.png">
+
 	
-  <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
-  <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="script.js"></script>
+  
 	
   <meta name="google-adsense-account" content="ca-pub-9639638377144073">
   <meta property="og:title" content="A Basic HTML5 Template">
@@ -19,15 +35,10 @@
   <meta name="keywords" content="HTML5, Node.js, Jquery">
   <meta name="author" content="Orris Baker">
   <!-- document ready -->
-  <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-  <link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8" />
-  <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
-  <script type="text/javascript" src="./scripts.js"></script>
-  <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+  
 	
-  <link rel="stylesheet" href="./style[1].css">
-  <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
+  
+  
   <link rel="stylesheet" href="./CSS/gallery-3col-mix.css" type="text/css" media="screen" charset="utf-8">
   <!-- 01_lightbox -->
   <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
@@ -35,7 +46,7 @@
   <link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
   <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
   <link rel="stylesheet" href="./scroll.css" type="text/css" media="screen" charset="utf-8">
-  <link rel="stylesheet" href="./nav[1].css">
+  
   <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="./fonts/font-awesome.min.css">
