--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         <div class="data" id="html5style2content">
             <div class="row">
                 <div class="col-12">
-                    <img id="kite" src="img/kite.png" ;>
+                    <img id="kite" src="img/kite.png">
                     <!-- <div id="container">
                         <div id="header">
                         <h1>StarTrackr!</h1>
