--- a/index[1].html
+++ b/index[1].html
@@ -34,15 +34,15 @@
   <meta property="og:image" content="image.png">
   <meta name="keywords" content="HTML5, Node.js, Jquery">
   <meta name="author" content="Orris Baker">
-  <!-- document ready -->
+  <!-- document ready --
   
 	
   
   
   <link rel="stylesheet" href="./CSS/gallery-3col-mix.css" type="text/css" media="screen" charset="utf-8">
-  <!-- 01_lightbox -->
+  <!-- 01_lightbox --
   <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
-  <!-- 02_colorbox -->
+  <!-- 02_colorbox --
   <link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
   <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
   <link rel="stylesheet" href="./scroll.css" type="text/css" media="screen" charset="utf-8">
