--- a/index[1].html
+++ b/index[1].html
@@ -30,7 +30,7 @@
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
-		<link rel="icon" type="image/png" href="./flexy-logo.png">
+		<link rel="icon" type="image/png" href="./weed.jpg">
 		<!--
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Viewport for responsive web design --
@@ -85,7 +85,7 @@
   <!-- Favicon-->
   <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
   <link rel="alternate" type="application/pdf" href="MainPage.pdf">
-  <link rel="author" href="mailto:bakerorris0@gmail.comcom">
+  <link rel="author" href="mailto:bakerorris0@gmail.com">
   <!-- Bootstrap Icons-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
   <!-- SimpleLightbox plugin CSS-->
