--- a/index[1].html
+++ b/index[1].html
@@ -129,7 +129,7 @@
 
     <div class="row">
       <div class="çol-12">
-        <img src="img/kite.png" ;>
+        <img src="img/kite.png">
       </div>
     </div><!-- end-.row -->
     <div class="data" id="#html5style2content">
