--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
-		<link rel="icon" type="image/png" href="./logo.jpg">
+		<link rel="icon" type="image/jpg" href="./img/logo.jpg">
           
         <link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8" />
   
